Removed dead links

--- a/posts/machine-learning-roadmap.mdx
+++ b/posts/machine-learning-roadmap.mdx
@@ -29,6 +29,8 @@ This month I worked on two main projects
 - [Using GPT4 To generate React Components using the @shadcn/ui library](blog/gpt_react)
 - Creating an Arxiv Crawler
 
+I also finally got around to finishing up a [quick article](blog/deriving_the_derivative_for_a_softmax_cross_entropy) on the derivation of the softmax and cross entropy loss which I worked through in CS321n.
+
 ### September
 
 September proved to be a pretty productive month for me. I managed to achieve the following things
